--- a/src/css/input.css
+++ b/src/css/input.css
@@ -9,26 +9,25 @@
 
 @layer components {
   .container {
-    @apply xl:max-w-[82.5rem] mx-auto px-[16px];
+    @apply mx-auto px-[16px] xl:max-w-[82.5rem];
   }
 }
 
 @layer utilities {
   .main-border {
-    @apply border-2 border-primary;
+    @apply border-primary border-2;
   }
   body {
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
   }
 
   .navbar-fixed {
-    @apply fixed z-50 bg-white opacity-80;
-    backdrop-filter: blur(10px);
+    @apply dark:bg-dark fixed z-50 bg-white opacity-80 backdrop-blur-sm dark:opacity-80;
     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
   }
 
   .hamburger-line {
-    @apply w-[30px] h-[2.5px] my-2 bg-dark block transition duration-300 ease-in-out;
+    @apply bg-dark my-2 block h-[2.5px] w-[30px] transition duration-300 ease-in-out dark:bg-white;
   }
 
   .container {
@@ -36,16 +35,22 @@
   }
 
   .hamburger-active > span:nth-child(1) {
-    @apply rotate-45 ;
+    @apply rotate-45;
   }
   .hamburger-active > span:nth-child(2) {
     @apply scale-0;
   }
   .hamburger-active > span:nth-child(3) {
-    @apply -rotate-45 ;
+    @apply -rotate-45;
   }
 
   .my-image-size {
     @apply h-[1/2] object-cover;
   }
+
+  #dark-toggle:checked ~ label div.toggle-circle {
+    @apply translate-x-3;
+  }
 }
+
+@custom-variant dark (&:where(.dark, .dark *));
